<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Contador de Productos"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 1\n # "
            android:backgroundTint="#1EEE25"
            />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 2\n # "
            android:backgroundTint="#F04D0D"/>
        <Button
            android:id="@+id/btn_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 3\n # "
            android:backgroundTint="#0FF2EF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 4\n # "
            android:backgroundTint="#0FF2EF"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 5\n # "
            android:backgroundTint="#1EEE25"/>
        <Button
            android:id="@+id/btn_6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 6\n # "
            android:backgroundTint="#F04D0D"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 7\n # "
            android:backgroundTint="#F04D0D"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 8\n # "
            android:backgroundTint="#0FF2EF"/>
        <Button
            android:id="@+id/btn_9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Producto 9\n # "
            android:backgroundTint="#1EEE25"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nombre"/>
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_correo"/>
    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"/>
    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Enviar"/>


</LinearLayout>